# gzzReadline

./: .clang-format  CMakeLists.txt  changelog
debian/: final_deb_stuff.sh.in
docs/: CPack.Description.txt  README.md
source/: gzz_readline.c  gzz_readline.h  gzz_rlprivate.c  gzz_rlprivate.h
